--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -23,7 +23,7 @@ header {
 			margin-right: 15px;
 			margin-top: -6px;
 		}
-
+		
 
 	}
 	nav {
@@ -103,7 +103,7 @@ header {
 }
 .dropdown {
 	font-weight:$regular;
-
+	
 	.dropdown-menu {
 		border: 0;
 		border-radius: 2px;
@@ -134,5 +134,89 @@ header:not(.white) {
 				background: transparent;
 			}
 		}
+	}
+}
+
+.mobile-nav {
+	position: relative;
+	header {
+		height: 85px;
+		background-color: white;
+		border-bottom: 1px solid #dbdbdb;
+		margin-left: -15px; margin-right: -15px;
+		width: 100vw;
+		max-width: 100%; // fix-mobile horizontal scroll
+		position: fixed; top: 0; z-index: 999;
+		
+		a.logo {
+			background: url(../images/logo-red.png) no-repeat center left; 
+			background-size: 100%;
+			margin-top: 20px;
+		}
+		a.menu-trigger {
+			background: url(../images/mobile-menu.png) no-repeat center center;
+			background-size: 90%;
+			margin-top: 25px;
+			width: 28px;
+			height: 28px;
+			margin-right: 15px;
+			&.close {
+				background: url(../images/mobile-menu-close.png) no-repeat center center;
+				background-size: 90%;
+				opacity: 1;
+			}
+		}
+	}
+	.mobile-menu {
+		background-color: $bg3;
+		position: fixed;
+		left: 0;
+		z-index: 99;
+		top: 85px;
+		height: 0px;
+		width: 100vw;
+		max-width: 100%; // fix-mobile horizontal scroll
+		overflow-x: auto;
+		// @include transition(all 0.5s ease-out);
+
+		> .container {
+		    overflow-x: scroll;
+		    padding-bottom: 180px;
+		}
+
+		h2 {
+			margin: 40px 0;
+			font-family: $font-second;
+			font-weight: $latoBold;
+			font-size: 2.6em;
+			letter-spacing: 4px;
+			text-transform: uppercase;
+			color: #535353;
+			text-align: center;
+		}
+		.hr {
+			width: 96px;
+			height: 1px;
+			background: #535353;
+			margin: 0 auto 40px;
+			display: block;
+		}
+		.searchbar {
+			float: none;
+			margin: 0 auto;
+			input {
+				width: 100%;
+				height: 65px;
+				margin-bottom: 20px;
+			}
+			.btn-red {
+				height: 65px;
+				line-height: 3em;
+				border-radius:0;
+				font-size: 1.6em;
+				text-transform: uppercase;
+			}
+		}
+			
 	}
 }
