--- a/public/scss/partials/_helpers.scss
+++ b/public/scss/partials/_helpers.scss
@@ -39,9 +39,15 @@
   color: #000;
   padding: 0.2em 0;
 }
-.nofloat {
+
+@mixin nofloat() {
 	float: none !important;
 }
+
+@mixin hide() {
+	display: none !important;
+}
+
 @mixin hr($color, $height, $margin)
 {
 	background-color: $color;
@@ -87,11 +93,4 @@
 		text-decoration: none;
 		color: $color;
 	}
-}
-
-@mixin hide {
-  height: 0;
-  margin: 0;
-  overflow: hidden;
-  padding: 0;
 }
