--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -2,9 +2,32 @@
 	   P A G E  S A L O N
 ////////////////////////////////*/
 .carousel-inner .item {
-	min-height: 470px;
+	height: 470px;
 	background: url(../images/placeholder-salon-img.jpg) no-repeat center center;
 	background-size: cover;
+
+	@media screen and (max-width: $screen-xs-max) {
+		height: 320px;
+	}
+
+	.outer-img {
+		position: relative;
+		width: 100%;height: 470px;
+		@media screen and (max-width: $screen-xs-max) {
+			height: 320px;
+		}
+		img {
+			position: absolute;
+			top: 0;left: 0;bottom: 0;right: 0;
+			margin: auto;
+			width: 100%;
+			height: auto;
+			@media screen and (max-width: $screen-xs-max) {
+				width: auto;
+				height: 100%;
+			}
+		}
+	}
 }
 .salon#content {
 	.main-content {
@@ -21,6 +44,9 @@
 			.row {
 				background-color: white;
 				padding-left: 35px;
+				@media screen and (max-width: $screen-xs-max) {
+					padding-left: 15px;
+				}
 			}
 			.row:first-child {
 				margin-top: -105px; // for -90 offset
@@ -29,6 +55,11 @@
 				padding-left: 35px;
 				border-top-left-radius: 4px;
 				border-top-right-radius: 4px;
+				@media screen and (max-width: $screen-sm-max) {
+					margin-top: 0;
+					padding-left: 15px;
+					border-radius: 0px;
+				}
 				h1 {margin-top: 0;}
 			}
 
@@ -56,6 +87,12 @@
 			.social {
 				height: auto;
 				padding: 20px 0px 40px 35px;
+				@media screen and (max-width: $screen-xs-max) {
+					padding-left: 15px;
+				}
+				div.twitter {
+					padding-right: 0;
+				}
 				a {
 					background: #f4f4f4;
 					border:1px solid #d2d5d6;
@@ -74,8 +111,21 @@
 						left: 38px;
 					}
 					@include transition(all 0.25s ease-out);
+					@media screen and (max-width: $screen-xs-max) {
+						padding: 20px;
+						width: auto;
+						.socicon {
+							top: 10px;
+							left: 29px;
+						}
+					}
 				}
 				a.facebook {
+					@media screen and (max-width: $screen-xs-max) {
+						background-color: #6788ce;
+						border-color: #6788ce;
+						color: white;
+					}
 					&:hover {
 						background-color: #6788ce;
 						border-color: #6788ce;
@@ -83,6 +133,11 @@
 					}
 				}
 				a.twitter {
+					@media screen and (max-width: $screen-xs-max) {
+						background-color: #29c5f6;
+						border-color: #29c5f6;
+						color: white;
+					}
 					&:hover {
 						background-color: #29c5f6;
 						border-color: #29c5f6;
@@ -95,6 +150,10 @@
 	section.salon-content {
 		margin-top: 20px;
 		margin-bottom: 70px;
+
+		h5 {
+			font-family: $font-main;
+		}
 
 		> .row {
 			background-color: white;
@@ -122,6 +181,10 @@
 		section {
 			padding-left: 50px;
 			padding-right: 50px;
+			@media screen and (max-width: $screen-xs-max) {
+				padding-left: 15px;
+				padding-right: 15px;
+			}
 			padding-bottom: 35px;
 			border-bottom: 2px solid $border-color;
 			h4 {
@@ -183,20 +246,7 @@
 					}
 				}
 			}
-			.promo {
-				padding-top: 0;padding-bottom: 0;
-				border-left: 15px solid $promo-color;
-				padding-left: 15px;
-				h4 {
-					font-size: 1.6em;
-					color: $promo-color;
-					font-weight: $regular;
-				}
-				p {
-					font-size: 1.4em;
-					color: $font-color;
-				}
-			}
+
 			.map {
 				height: 247px;
 				width: auto;
@@ -204,20 +254,21 @@
 				margin: 30px -50px 0;
 				background-size:cover;
 			}
-			.salon-hairfies {
-				padding-left: 15px;
-  				padding-right: 15px;
-  				.single-hairfie {
-					padding: 0;
-				}
-			}
 
+		}
+		#avis .row {
+			padding-left: 15px;
+			padding-right: 15px;
+			border: 0;
+			padding-bottom: 0;
 		}
 	}
 	.sidebar {
 		margin-top: -90px;
 		@include fullWidthBg($bg3);
-
+		.calendar {
+			margin-bottom: 10px;
+		}
 		.phone {
 			.btn-red {
 				position: relative;
@@ -230,7 +281,6 @@
 				@include box-shadow(0 1px 3px rgba(0,0,0,0.1));
 				//#gradient@include vertical(#fc5b62;#d7474d;);
 				@include gradient-vertical(#fc5b62, #d7474d);
-
 				&:active {
 					//#gradient@include vertical(#d7474d; #fc5b62;);
 					@include gradient-vertical(#d7474d, #fc5b62);
@@ -243,6 +293,16 @@
 					height: 25px;
 					left: 70px;
 					top: 21px;
+
+					@media screen and (min-width: $screen-sm-max) and (max-width: $screen-md-max)  {
+						left: 40px;
+					}
+					@media screen and (max-width: $screen-sm-min) {
+						left: 20%;
+					}
+					@media screen and (max-width: $screen-xs-max) {
+						left: 25px;
+					}
 				}
 			}
 		}
@@ -261,6 +321,12 @@
 				@include box-shadow(0px 1px 3px rgba(0,0,0,0.1));
 				.icon-promo {
 					float:none;margin-right: 10px;
+				}
+				@media screen and (max-width: $screen-xs-max) {
+  					font-size: 1.6em !important;
+				}
+				@media screen and (max-width: $screen-sm-max) {
+  					text-align: center;
 				}
 			}
 			.btn-red {
@@ -283,6 +349,13 @@
 			margin-top: 15px;
 			margin-bottom: 20px;
 
+			@media screen and (max-width: $screen-sm-max) {
+				margin-top: 0;
+			}
+			@media screen and (max-width: $screen-xs-max) {
+				padding-left: 30px;
+			}
+
 			h5 {
 				color: $darkgrey;
 				font-size: 1.6em;
@@ -295,6 +368,12 @@
 				border-bottom: 1px solid $border-color;
 				&:last-child {
 					border:none;
+				}
+				a:first-child {
+					overflow: hidden;
+					@media screen and (max-width: $screen-xs-max) {
+						padding-left: 0;
+					}
 				}
 				a:nth-child(2) {
 					font-size: 1.4em;
@@ -334,6 +413,10 @@
 		}
 		.networks {
 			margin-bottom: 60px;
+			@media screen and (max-width: $screen-xs-max) {
+				padding-left: 0;
+				padding-right: 0;
+			}
 			p {
 				text-align: center;
 				color:$font-color;
@@ -344,14 +427,40 @@
 				margin-top: 0;
 			}
 
-			ul {
+			.social-links {
 				padding: 20px;
 				margin: 10px auto;
-				width: 89%;
+				width: 280px;
+				margin-left: 8%;
+  				margin-left: #{"calc(50% - 140px)"};
 				li {
+					margin-right: 10px;
+					&:last-child {margin-right: 0;}
 					a {
+						width: 38px;
+						box-sizing: border-box;
 						color: $font-color;
 						border-color: $font-color;
+						position: relative;
+						@include transition(all 0.25s ease);
+						&:after {
+							content: " ";
+							position: absolute;
+							width: #{"calc(100% + 4px)";height: ~"calc(100% + 4px)"};
+							border-radius: 100%;
+							border: 2px solid $font-color;
+							left: -2px;top: -2px;
+							opacity: 0;
+							@include transition(all 0.25s ease);
+						}
+						&:hover {
+							@include transition(all 0.25s ease);
+							color: $font-color !important;
+							background-color: transparent !important;
+							&:after {
+								opacity: 1;
+							}
+						}
 					}
 				}
 			}
