remove old stuff

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -23,14 +23,13 @@ body {
     }
 }
 
-@import "mainLucas";
 @import "temp";
 
 @import "various/colors";
 @import "various/homePro";
 @import "various/starRating";
 
-// LUCAS LESS IN SASS BELOW
+// LUCAS  BELOW
 
 @import "partials/variables";
 @import "partials/helpers";
