--- a/public/scss/_main.scss
+++ b/public/scss/_main.scss
@@ -6106,11 +6106,7 @@ span.arrow-right {
   /* Medium devices (desktops, 992px and up) */
   /* Large devices (large desktops, 1200px and up) */
 }
-@media (min-width: 768px) {
-  .cal {
-    width: 248px;
-  }
-}
+
 @media (min-width: 992px) {
   .cal {
     width: 324px;
@@ -6194,7 +6190,7 @@ span.arrow-right {
 .cal td:first-child {
   border-left: 0;
 }
-@media (min-width: 768px) {
+@media (max-width: 991px) {
   .cal th,
   .cal td {
     width: 248px;
@@ -8705,6 +8701,13 @@ section.home-footer .row > div p {
   margin-top: -90px;
   position: relative;
 }
+
+@media screen and (max-width: 991px) {
+  .salon#content .sidebar {
+    width: 100%;
+  }
+}
+
 .salon#content .sidebar:before {
   content: " ";
   width: 200vw;
@@ -8728,6 +8731,7 @@ section.home-footer .row > div p {
 .salon#content .sidebar .calendar {
   margin-bottom: 10px;
 }
+
 .salon#content .sidebar .phone .btn-red {
   position: relative;
   display: block;
@@ -8815,6 +8819,17 @@ section.home-footer .row > div p {
   -moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
 }
+
+@media screen and (max-width: 991px) {
+  .salon#content .sidebar .promo-sidebar .btn-red {
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    width:100%;
+    z-index: 10000;
+  }
+}
+
 .salon#content .sidebar .related-content {
   background: white;
   border-radius: 3px;
