--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7308,6 +7308,9 @@ span.arrow-right {
       font-weight: 700;
       color: #353535;
       text-transform: none; }
+      @media (max-width: 992px) {
+        .cal thead th {
+          width: 50px; } }
   .cal tbody {
     border: 2px solid #e5e5e5; }
   .cal th, .cal td {
@@ -9372,6 +9375,9 @@ section.home-footer .row > div {
     top: 0;
     background: #f4f4f4;
     z-index: -1; }
+  @media screen and (max-width: 991px) {
+    .salon#content .sidebar {
+      width: 100%; } }
   .salon#content .sidebar .calendar {
     margin-bottom: 10px; }
   .salon#content .sidebar .phone .btn-red {
@@ -9447,6 +9453,13 @@ section.home-footer .row > div {
     -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1); }
+    @media screen and (max-width: 991px) {
+      .salon#content .sidebar .promo-sidebar .btn-red {
+        bottom: 0;
+        left: 0;
+        position: fixed;
+        width: 100%;
+        z-index: 10000; } }
   .salon#content .sidebar .related-content {
     background: white;
     border-radius: 3px;
