--- a/public/scss/partials/_page-hairfie.scss
+++ b/public/scss/partials/_page-hairfie.scss
@@ -2,7 +2,9 @@
       P A G E  H A I R F I E
 ////////////////////////////////*/
 .hairfie-singleView#content {
-	
+	@media screen and (max-width: 767px) {
+	   margin-top: 100px;
+ 	}
 	min-height: #{"calc(100vh - 60px)"};
 	height: 100%;
 	position: relative;
@@ -160,6 +162,12 @@
 			}
 		}
 		.like-group {
+			@media {
+			width:100%;
+			position: fixed;
+			left: 0;
+			bottom: 0;
+			}
 			width: 100%;
 			height: 65px;
 			position: absolute;
@@ -206,9 +214,11 @@
 				}
 			}
 			.cta {
-				float: none; display: inline-block;
-				width: #{"calc(100% - 65px)"}; height: 65px;
-
+				float: none;
+				display: inline-block;
+				width: 100%;
+				height: 65px;
+				z-index: 10000;
 				a {
 					text-transform: uppercase;
 					float: right; 
