--- a/public/scss/partials/_page-hairfie.scss
+++ b/public/scss/partials/_page-hairfie.scss
@@ -162,11 +162,12 @@
 			}
 		}
 		.like-group {
-			@media {
+			@media (max-width: 767px){
 			width:100%;
 			position: fixed;
 			left: 0;
 			bottom: 0;
+			z-index: 100000;
 			}
 			width: 100%;
 			height: 65px;
@@ -218,7 +219,6 @@
 				display: inline-block;
 				width: 100%;
 				height: 65px;
-				z-index: 10000;
 				a {
 					text-transform: uppercase;
 					float: right; 
