--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -205,7 +205,7 @@
 	.sidebar {
 		margin-top: -90px;
 		@include fullWidthBg($bg3);
-		@media screen and (max-width: 991px) {
+		@media screen and (max-width: $screen-sm-max) {
 			width: 100%;
 		}
 		.calendar {
@@ -280,7 +280,7 @@
 				letter-spacing: 2px;
 				padding-top: 20px;padding-bottom: 20px;
 				@include box-shadow(0px 1px 3px rgba(0,0,0,0.1));
-				@media screen and (max-width: 991px) {
+				@media screen and (max-width: $screen-sm-max) {
     				bottom: 0;
     				left: 0;
     				position: fixed;
